--- a/polonpack/assets/mcheli/weapons/mk82_b2atomic.yml
+++ b/polonpack/assets/mcheli/weapons/mk82_b2atomic.yml
@@ -1,4 +1,4 @@
-DisplayName: Atomic Bomb
+DisplayName: Nuclear Bomb
 Type: bomb
 Ballistics:
   Acceleration: 0.1
@@ -7,16 +7,18 @@ Ballistics:
   GravityInWater: -0.03
   VelocityInWater: 0.999
 NTM:
-  PayloadType: NUKE    
+  PayloadType: NUKE
 Explosion:
   Power: 100
 Ammo:
   ReloadTime: 600
-  MagSize: 1
-  MaxAmmo: 1
+  MagSize: 2
+  MaxAmmo: 2
   ResupplyCount: 1
   AmmoItems:
   - Count: 1
     Name: hbm:det_nuke
     Meta: 0
-FireCooldown: 60
+FireCooldown: 9
+Render:
+  BulletModel: mk82_b
