--- a/polonpack/assets/mcheli/planes/b-2aAtomic.yml
+++ b/polonpack/assets/mcheli/planes/b-2aAtomic.yml
@@ -39,44 +39,23 @@ Weapons:
   Position: [1.84, 2.8, -4.27]
 - Type: mk82_b2atomic
   Position: [-1.84, 2.8, -4.27]
-- Type: gbu38
-  Position: [1.84, 2.8, -4.27]
-  SeatID: 2
-  CanUsePilot: false
-- Type: gbu38
-  Position: [-1.84, 2.8, -4.27]
-  SeatID: 2
-  CanUsePilot: false
-- Type: gbu38
-  Position: [1.84, 2.8, -8.57]
-  SeatID: 2
-  CanUsePilot: false
-- Type: gbu38
-  Position: [-1.84, 2.8, -8.57]
-  SeatID: 2
-  CanUsePilot: false
-- Type: gbu28
-  Position: [1.84, 1.8, -6.13]
-- Type: gbu28
   Position: [-1.84, 1.8, -6.13]
 - Type: agm154atomic
   Position: [1.84, 1.8, -6.13]
   SeatID: 2
+  CanUsePilot: false
 - Type: agm154atomic
   Position: [-1.84, 1.8, -6.13]
   SeatID: 2
-- Type: gbu57
-  Position: [1.84, 1.8, -6.13]
-  SeatID: 2
-- Type: gbu57
-  Position: [-1.84, 1.8, -6.13]
-  SeatID: 2
+  CanUsePilot: false
 - Type: agm158atomic
   Position: [1.84, 1.8, -6.13]
   SeatID: 2
+  CanUsePilot: false
 - Type: agm158atomic
   Position: [-1.84, 1.8, -6.13]
   SeatID: 2
+  CanUsePilot: false
 Seats:
 - Position: [0.8, 3.4, 0.28]
   Hud: plane
@@ -124,22 +103,22 @@ Components:
   - Position: [-2.79, 1.86, -6.56]
     Rotation: [0.0, -0.04, 1.0]
     PartName: wb0
-    WeaponName: mk82_b2atomic/ gbu38 / gbu28 / agm154atomic / gbu57 /agm158atomic
+    WeaponName: mk82_b2atomic/ agm154atomic/ agm158atomic
     MaxRotation: -1.0
   - Position: [-0.15, 1.72, -6.56]
     Rotation: [0.0, -0.04, 1.0]
     PartName: wb1
-    WeaponName: mk82_b2atomic/ gbu38 / gbu28 / agm154atomic / gbu57 /agm158atomic
+    WeaponName: mk82_b2atomic/ agm154atomic/ agm158atomic
     MaxRotation: 1.0
   - Position: [2.79, 1.86, -6.56]
     Rotation: [0.0, -0.04, 1.0]
     PartName: wb2
-    WeaponName: mk82_b2atomic/ gbu38 / gbu28 / agm154atomic / gbu57 /agm158atomic
+    WeaponName: mk82_b2atomic/ agm154atomic/ agm158atomic
     MaxRotation: 1.0
   - Position: [0.15, 1.72, -6.56]
     Rotation: [0.0, -0.04, 1.0]
     PartName: wb3
-    WeaponName: mk82_b2atomic/ gbu38 / gbu28 / agm154atomic / gbu57 /agm158atomic
+    WeaponName: mk82_b2atomic/ agm154atomic/ agm158atomic
     MaxRotation: -1.0
   LandingGear:
   - Position: [0.0, 2.96, 2.79]
